tests/base/parser/bad/exps/exp_t-let-id-with.scilexp
let a equals True in a
